# TaarYa

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  Dockerfile.postgres  EXPERIMENT_LOG.md  LICENSE  PAPER_DRAFT.md  QUICKSTART.md  RAG_Astronomy_Review.pptx  README.md  RESEARCH_ROADMAP.md  SETUP.md  TaarYa_Major_Project_Report_ES452.docx  USICT ES-452 Major Project - Dissertation  Report Format-(2025-26).docx  check_table_cols.py  conda-lock.yml  desktop.py  docker-compose.gpu.yml  docker-compose.yml  download_screens.ps1  download_screens.py  project ppt sample.ppt  pyproject.toml  requirements.txt  run_tests.bat  start_taarya.bat  start_taarya.sh  synopsis.txt  taarya_paper.tex  taarya_refs.bib  test_agent.py  tmp_ppt_extract.py  ~$ICT ES-452 Major Project - Dissertation  Report Format-(2025-26).docx
docker/: Dockerfile.postgres
docx_inspect/: report_format_review.html
eval/: ablation.py  ablation_formal.py  benchmark.py  benchmark_queries.json  benchmark_results.json  benchmark_spatial.py  evaluate_research.py  metrics.py  results.json  run_benchmark.py  test_scientific_api.py  validate_discovery.py
ppt_inspect/: ppt_review.html  project-ppt-sample-converted.pptx
ppt_transform/: RAG_Astronomy_Review_Transformed_Project_Template.pptx  build_rag_project_review.py
report_output/: build_taarya_major_report.py
scripts/: expand_sky_coverage.py  fetch_sample_data.py  generate_demo_files.py  generate_diagrams.py  init-q3c.sh  migrate_research_columns.py  run_regression.py  seed_research_regions.py  test_interop.py
src/: __init__.py  cli.py  (+7 more)
(+128 files in other folders)
